--- a/css/form.css
+++ b/css/form.css
@@ -9,7 +9,7 @@ html {
 /*body styling*/
 
 body {
-	background-color: #581b98;
+	/*background-color: #581b98;*/
 	margin: 0;
 	padding: 4rem 0 4rem 0;
 	display: flex;
